--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,165 @@
-<h1>Hello,World!!</h1>
+<div class="ship-table">
+
+<% if @view_mode == 4 then %>
+<h3>本日(<%= @time.month %>月<%= @time.day %>日)の製造量</h3>
+<table>
+  <tr>
+    <th></th>
+	<th class="type_f">F</th>
+	<th class="type_z">全卵</th>
+	<th class="type_o">その他</th>
+	<th class="type_sum">合計</th>
+  </tr>
+  <tr>
+	<td></td>
+	<td><div class="type_f triangle"></div></td>
+	<td><div class="type_z triangle"></div></td>
+	<td><div class="type_o triangle"></div></td>
+	<td><div class="type_sum triangle"></div></td>
+  </tr>
+  <tr class="tr_main">
+    <td class="vertical"><span>製造量</span></td>
+	<td class="type_f"><span><%= @today_f_summake %></span> kg</td>
+	<td class="type_z"><span><%= @today_z_summake %></span> kg</td>
+	<td class="type_o"><span><%= @today_other_ship %></span> kg</td>
+	<td class="type_sum"><span><%= @today_all_summake %></span> kg</td>
+  </tr>
+  <tr class="tr_sub">
+    <td class="vertical"> -本日出荷分</td>
+	<td class="type_f"><span><%= @today_f_make %></span> kg</td>
+	<td class="type_z"><span><%= @today_z_make %></span> kg</td>
+	<td class="type_o"><span><%= @today_other_ship %></span> kg</td>
+	<td class="type_sum"><span><%= @today_all_make %></span> kg</td>
+  </tr>
+  <tr class="tr_sub">
+    <td class="vertical"> -翌日出荷分</td>
+	<td class="type_f"><span><%= @today_f_store %></span> kg</td>
+	<td class="type_z"><span><%= @today_z_store %></span> kg</td>
+	<td class="type_o"></td>
+	<td class="type_sum"><span><%= @today_all_store %></span> kg</td>
+  </tr>
+  <tr class="tr_main">
+    <td class="vertical"><span>出荷量</span></td>
+	<td class="type_f"><span><%= @today_f_ship %></span> kg</td>
+	<td class="type_z"><span><%= @today_z_ship %></span> kg</td>
+	<td class="type_o"><span><%= @today_other_ship %></span> kg</td>
+	<td class="type_sum"><span><%= @today_all_ship%></span> kg</td>
+  </tr>
+  <tr class="tr_sub">
+    <td class="vertical"> -昨日製造分</td>
+	<td class="type_f"><span><%= @today_f_stored %></span> kg</td>
+	<td class="type_z"><span><%= @today_z_stored %></span> kg</td>
+	<td class="type_o"></td>
+	<td class="type_sum"><span><%= @today_all_stored %></span> kg</td>
+  </tr>
+  <tr class="tr_sub">
+    <td class="vertical"> -本日製造分</td>
+	<td class="type_f"><span><%= @today_f_make %></span> kg</td>
+	<td class="type_z"><span><%= @today_z_make %></span> kg</td>
+	<td class="type_o"><span><%= @today_other_ship %></span> kg</td>
+	<td class="type_sum"><span><%= @today_all_make %></span> kg</td>
+  </tr>
+  <tr class="tr_main tr_last">
+    <td class="vertical"><span>製造/出荷</span></td>
+	<td class="type_f"><span><%= @today_f_ratio %></span> 倍</td>
+	<td class="type_z"><span><%= @today_z_ratio %></span> 倍</td>
+	<td class="type_o"><span><%= @today_other_ratio %></span> 倍</td>
+	<td class="type_sum"><span><%= @today_all_ratio %></span> 倍</td>
+	
+  </tr>
+  
+  
+</table>
+
+<% else %>
+<p id="noexcel">
+	<%=@noexcelmsg %>
+</p>
+<% end %>
+
+<% if @view_mode == 2 then %>
+	<%= form_tag({controller: "users",action: "index", method: "post"}, {multipart: true}) do %>
+		<%= hidden_field_tag :setting_fin, @view_mode == 3 ? true:false %>
+		<%= hidden_field_tag :supposed_date, @tabledate.date %>
+		<%= submit_tag "送信" %>
+	<%= file_field_tag :file %>
+	<% end %>
+<% end %>
+
+
+<% if @view_mode == 3 then %>
+	<%= form_tag({controller: "users",action: "index", method: "post"}, {multipart: true}) do %>
+<table class="fin_table">
+  <tr>
+    <th></th>
+	<th class="type_f">F</th>
+	<th class="type_z">全卵</th>
+	<th class="type_o">その他</th>
+	<th class="type_sum">合計</th>
+  </tr>
+  <tr>
+	<td></td>
+	<td><div class="type_f triangle"></div></td>
+	<td><div class="type_z triangle"></div></td>
+	<td><div class="type_o triangle"></div></td>
+	<td><div class="type_sum triangle"></div></td>
+  </tr>
+  
+  <tr class="tr_sub">
+    <td class="vertical">本日出荷分</td>
+	<td class="type_f"><span><%= @table_f_make %></span> kg</td>
+	<td class="type_z"><span><%= @table_z_make %></span> kg</td>
+	<td class="type_o"><span><%= @table_other_make %></span> kg</td>
+	<td class="type_sum"><span><%= @table_all_make %></span> kg</td>
+  </tr>
+
+</table>
+		<%= hidden_field_tag :setting_fin, @view_mode == 3 ? true:false %>
+		<%= hidden_field_tag :supposed_date, @tabledate.date %>
+		<%= submit_tag "送信" %>
+		<%= file_field_tag :file %>
+	<% end %>
+	<%= form_tag({controller: "users",action: "index", method: "post"}, {multipart: true}) do %>
+<table class="fin_table">
+  <tr class="tr_sub">
+    <td class="vertical">翌日出荷分</td>
+	<td class="type_f td_input"><%= text_field_tag :f_result, @table_f_premake,:size=>"3" %><span> kg</span></td>
+	<td class="type_z td_input"><%= text_field_tag :z_result, @table_z_premake,:size=>"3" %><span> kg</span></td>
+	<td class="type_o"></td>
+	<td class="type_sum"><%= @table_all_premake %> kg</td>
+  </tr>
+
+</table>	
+		<%= submit_tag "確定" %>
+		<%= hidden_field_tag :setting_fin, true %>
+		<%= hidden_field_tag :supposed_date, @tabledate.date %>
+	<% end %>
+<% end %>
+
+</div>
+
+
+<br><br>
+<div class="ckick-graph">
+<h3>今週の製造量推移</h3>
+<%= column_chart @chart_data, stacked: true, max:@max_ship,
+colors: ["#fff","#f00","#800","f99","#00f","#008","#99f","#ffc520","#9f7500"],legend: false %>
+</div>
+
+<div class="ckick-graph">
+<h3>今週の出荷量推移</h3>
+<%= column_chart @chart_data2, stacked: true, max:@max_ship,
+colors: ["#fff","#f00", "#00f","#ffc520","#800","#008","#9f7500"],legend: false %>
+</div>
+
+<div class="ckick-graph nw-graph">
+<h3>翌週の製造量推移</h3>
+<%= column_chart @chart_data3, stacked: true, max:@max_ship,
+colors: ["#fff","#800","#f99","#008","#99f","#9f7500"],legend: false %>
+</div>
+
+<div class="ckick-graph nw-graph">
+<h3>翌週の出荷量推移</h3>
+<%= column_chart @chart_data4, stacked: true, max:@max_ship,
+colors: ["#fff","#800","#008","#9f7500"],legend: false %>
+</div>
