--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,48 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag '//www.google.com/jsapi','chartkick','application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+  
+  <header>
+		受注量予測システム	
+		<% if user_signed_in? %>
+			<%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+			<%#= link_to 'プロフィール変更', edit_user_registration_path %>
+		<% else %>
+			 <%#= link_to 'サインアップ', new_user_registration_path %>
+			<%#= link_to 'ログイン', new_user_session_path %>
+		<% end %>
+	</header>
+	<% if user_signed_in? %>
+	<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarEexample">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarEexample">
+            <ul class="nav navbar-nav">
+				<li class="<%= 'active' if controller.action_name == 'index' %>"><%= link_to "出力",:controller => '/users', :action => 'index' %></li>
+			</ul>
+        </div>
+    </div>
+	</nav>
+	<% end %>
+	
+	<% if false %>
+	<p class="notice"><%= notice %></p>
+	<% end %>
+	<% if alert %>
+	<p class="alert"><%= alert %></p>
+	<% end %>
+	
     <%= yield %>
   </body>
 </html>
